de shi chang fen e jiu yi wei zhe zeng jia le suo yi wo men dui ci gan dao fei chang zi hao wo

--- a/paid-subscribe/index.html
+++ b/paid-subscribe/index.html
@@ -723,6 +723,119 @@
                                 </div>
                             </div>
                             <hr />
+                                                        <div class="panel panel-default">
+                                <div class="panel-heading">
+                                    <a href="javascript:;" class="js_to" data-url="https://web.fxyjs.fun/#/register?code=" data-type="Fangxin" data-code="mYHEkaJ1" target="_blank"><b>放心云</b></a>
+                                </div>
+                                <div class="panel-body">
+                                    
+                                    <dl>
+                                        <dt>资费</dt>
+                                                                                <dd>
+                                            <p>
+                                                <label>[豪华版]Ultimate：</label> ¥ 62.90 CNY/月付。 
+                                                                                                每月1T流量(1024G)就是任性,壕请随意; 
+                                                                                                1000Mbps带宽,不限速; 
+                                                                                                上Google/撸Youtube 4K/小电影; 
+                                                                                                全解锁Netflix|HBO|HULU等流媒体; 
+                                                                                                不限制设备在线数; 
+                                                                                                自研V2ray后端,匿名不记录任何日志; 
+                                                                                                V2ray协议加密保证您的隐私安全; 
+                                                                                                去烦人的广告; 
+                                                                                                肉翻群友创建,非钓鱼,请放心使用; 
+                                                                                            </p>
+                                        </dd>
+                                                                                <dd>
+                                            <p>
+                                                <label>[专业版]Pro：</label> ¥ 33.90 CNY/月付。 
+                                                                                                每月流量300G,油管无鸭梨,片随便看; 
+                                                                                                1000Mbps带宽,不限速; 
+                                                                                                上Google/撸Youtube 4K/小电影; 
+                                                                                                全解锁Netflix|HBO|HULU等流媒体; 
+                                                                                                不限制设备在线数; 
+                                                                                                自研V2ray后端,匿名不记录任何日志; 
+                                                                                                V2ray协议加密保证您的隐私安全; 
+                                                                                                去烦人的广告; 
+                                                                                                肉翻群友创建,非钓鱼,请放心使用; 
+                                                                                            </p>
+                                        </dd>
+                                                                                <dd>
+                                            <p>
+                                                <label>[基础版B]BasicB：</label> ¥ 16.90 CNY/月付。 
+                                                                                                每月流量100G,查资料/偶尔看点片; 
+                                                                                                1000Mbps带宽,不限速; 
+                                                                                                上Google/撸Youtube 4K/小电影; 
+                                                                                                全解锁Netflix|HBO|HULU等流媒体; 
+                                                                                                不限制设备在线数; 
+                                                                                                自研V2ray后端,匿名不记录任何日志; 
+                                                                                                V2ray协议加密保证您的隐私安全; 
+                                                                                                去烦人的广告; 
+                                                                                                肉翻群友创建,非钓鱼,请放心使用; 
+                                                                                            </p>
+                                        </dd>
+                                                                                <dd>
+                                            <p>
+                                                <label>[1T流量包]Package：</label> ¥ 145.90 CNY/一次性。 
+                                                                                                1T流量包(1024G),用完为止,永不过期,可续费; 
+                                                                                                1000Mbps带宽,不限速; 
+                                                                                                上Google/撸Youtube 4K/小电影; 
+                                                                                                全解锁Netflix|HBO|HULU等流媒体; 
+                                                                                                不限制设备在线数; 
+                                                                                                自研V2ray后端,匿名不记录任何日志; 
+                                                                                                V2ray协议加密保证您的隐私安全; 
+                                                                                                去烦人的广告; 
+                                                                                                肉翻群友创建,非钓鱼,请放心使用; 
+                                                                                            </p>
+                                        </dd>
+                                                                                <dd>
+                                            <p>
+                                                <label>[500G流量包]Package：</label> ¥ 83.90 CNY/一次性。 
+                                                                                                500G流量包,用完为止,永不过期,可续费; 
+                                                                                                1000Mbps带宽,不限速; 
+                                                                                                上Google/撸Youtube 4K/小电影; 
+                                                                                                全解锁Netflix|HBO|HULU等流媒体; 
+                                                                                                不限制设备在线数; 
+                                                                                                自研V2ray后端,匿名不记录任何日志; 
+                                                                                                V2ray协议加密保证您的隐私安全; 
+                                                                                                去烦人的广告; 
+                                                                                                肉翻群友创建,非钓鱼,请放心使用; 
+                                                                                            </p>
+                                        </dd>
+                                                                                <dd>
+                                            <p>
+                                                <label>[100G流量包]Package：</label> ¥ 29.00 CNY/一次性。 
+                                                                                                100G流量包,用完为止,永不过期,可续费; 
+                                                                                                1000Mbps带宽,不限速; 
+                                                                                                上Google/撸Youtube 4K/小电影; 
+                                                                                                全解锁Netflix|HBO|HULU等流媒体; 
+                                                                                                不限制设备在线数; 
+                                                                                                自研V2ray后端,匿名不记录任何日志; 
+                                                                                                V2ray协议加密保证您的隐私安全; 
+                                                                                                去烦人的广告; 
+                                                                                                肉翻群友创建,非钓鱼,请放心使用; 
+                                                                                            </p>
+                                        </dd>
+                                                                                <dd>
+                                            <p>
+                                                <label>[50G流量包B]Package：</label> ¥ 19.00 CNY/一次性。 
+                                                                                                50G流量包,用完为止,永不过期,可续费; 
+                                                                                                1000Mbps带宽,不限速; 
+                                                                                                上Google/撸Youtube 4K/小电影; 
+                                                                                                全解锁Netflix|HBO|HULU等流媒体; 
+                                                                                                不限制设备在线数; 
+                                                                                                自研V2ray后端,匿名不记录任何日志; 
+                                                                                                V2ray协议加密保证您的隐私安全; 
+                                                                                                去烦人的广告; 
+                                                                                                肉翻群友创建,非钓鱼,请放心使用; 
+                                                                                            </p>
+                                        </dd>
+                                                                            </dl>
+                                </div>
+                                <div class="panel-footer">
+                                    <a href="javascript:;" class="js_to" data-url="https://web.fxyjs.fun/#/register?code=" data-type="Fangxin" data-code="mYHEkaJ1" target="_blank">点击查看</a>
+                                </div>
+                            </div>
+                            <hr />
                                             </div>
                 <div class="col-md-3">
                     <div class="panel panel-default">
@@ -731,16 +844,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-33574.htm" title="Vue中引入静态资源的几种方式">Vue中引入静态资源的几种方式</a></li>
-                        <li class="py-2"><a href="/news/article-33096.htm" title="centos7-linux安装docker(离线方式)">centos7-linux安装docker(离线方式)</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-12-24-free-subscribe-node.htm" title="12月24日→21.2M/S|2025年最新免费节点Sockscap64订阅链接地址">12月24日→21.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-32625.htm" title="北京爱宠怡康动物医院(梧桐店)（北京宠爱动物医院消费高吗）">北京爱宠怡康动物医院(梧桐店)（北京宠爱动物医院消费高吗）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-12-23-node-share.htm" title="12月23日→22.9M/S|2024年最新免费节点V2rayU Node订阅链接地址">12月23日→22.9M/S|2024年最新免费节点V2rayU Node订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-30136.htm" title="什么是Python高阶函数">什么是Python高阶函数</a></li>
-                        <li class="py-2"><a href="/news/article-34519.htm" title="宠物领养证如何办理流程图片及价格大全（宠物领养证书怎么办理）">宠物领养证如何办理流程图片及价格大全（宠物领养证书怎么办理）</a></li>
-                        <li class="py-2"><a href="/news/article-31162.htm" title="兽医宠物店的兽医一个月能挣多少钱（兽医一般多少钱一个月）">兽医宠物店的兽医一个月能挣多少钱（兽医一般多少钱一个月）</a></li>
                         <li class="py-2"><a href="/free-nodes/2024-12-31-free-node-subscribe-links.htm" title="12月31日→20.2M/S|2025年最新免费节点Sockscap64订阅链接地址">12月31日→20.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-12-27-free-high-speed-nodes.htm" title="12月27日→20M/S|2025年最新免费节点Sockscap64订阅链接地址">12月27日→20M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-30245.htm" title="宠物粮食品牌前十排名榜单 宠物粮食品牌前十排名榜单图片">宠物粮食品牌前十排名榜单 宠物粮食品牌前十排名榜单图片</a></li>
+                        <li class="py-2"><a href="/news/article-33096.htm" title="centos7-linux安装docker(离线方式)">centos7-linux安装docker(离线方式)</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-1-1-free-node-subscribe.htm" title="1月1日→22.6M/S|2025年最新免费节点Sockscap64订阅链接地址">1月1日→22.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-33576.htm" title="宠物粮在哪个网站买便宜又好呢（宠物粮在哪里批发）">宠物粮在哪个网站买便宜又好呢（宠物粮在哪里批发）</a></li>
+                        <li class="py-2"><a href="/news/article-34043.htm" title="猫三联到底是两针还是三针啊图片（猫三联每针的作用）">猫三联到底是两针还是三针啊图片（猫三联每针的作用）</a></li>
+                        <li class="py-2"><a href="/news/article-31679.htm" title="记-Windows环境下Prometheus+alertmanager+windows_exporter+mtail监控部署提起网关日志">记-Windows环境下Prometheus+alertmanager+windows_exporter+mtail监控部署提起网关日志</a></li>
+                        <li class="py-2"><a href="/news/article-34519.htm" title="宠物领养证如何办理流程图片及价格大全（宠物领养证书怎么办理）">宠物领养证如何办理流程图片及价格大全（宠物领养证书怎么办理）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-12-24-free-subscribe-node.htm" title="12月24日→21.2M/S|2025年最新免费节点Sockscap64订阅链接地址">12月24日→21.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                     </ul>
     </div>
 </div>
@@ -752,7 +865,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">9</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
+                <h4><span class="badge" style="float: right;">12</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">27</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
